k8_deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nf-etl
  labels:
    env: development
